# Blog

./: .gitignore  Dockerfile  LICENSE  README.md  development.env  development_local.env  docker-compose.yaml  production.env  pyproject.toml
blog/: admin.py  app.py  commands.py  config.py  db.sqlite  enums.py
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/article/: views.py
blog/auth/: views.py
blog/author/: view.py
blog/forms/: article.py  user.py
blog/general/: views.py
blog/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
blog/permissions/: article.py  user.py
blog/templates/: base.html  main_navbar.html
blog/templates/admin/: index.html
blog/templates/article/: create.html  detail.html  details.html  list.html  list_by_tag.html
blog/templates/auth/: login.html  register.html
blog/templates/author/: list.html
blog/templates/general/: index.html
blog/templates/macro/: formhelpers.html
blog/templates/user/: detail.html  list.html
blog/user/: views.py
migrations/versions/: 12e6bfeba482_add_article_model.py  2e27000bec39_add_user_email.py  8fd13153c234_add_author_model.py  930215f7fd49_add_mtm_in_model.py  b117a1b166a8_create_user_table.py  bd5c7653cdac_update_user_model.py
var/scripts/: wait-for-postgres.sh
