[tool.poetry]
name = "blog-gb"
version = "0.1.0"
description = ""
authors = ["Sego <grayg@mail.ru>"]
readme = "README.md"
packages = [{include = "blog_gb"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
pep8-naming = "^0.13.2"
flake8-commas = "^2.1.0"
flake8-variables-names = "^0.0.5"
flake8-unused-arguments = "^0.0.12"
isort = "^5.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
